####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = editbar.png editor.htm enemy.png genhints.htm hero.png history.htm index.htm install.htm kgoldrunner.png level010.png menu.htm play.htm rules.htm select.htm select.png tech.htm tute008.png typical.htm 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/editbar.png $(kde_htmldir)/en/kgoldrun/editbar.png
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/editor.htm $(kde_htmldir)/en/kgoldrun/editor.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/enemy.png $(kde_htmldir)/en/kgoldrun/enemy.png
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/genhints.htm $(kde_htmldir)/en/kgoldrun/genhints.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/hero.png $(kde_htmldir)/en/kgoldrun/hero.png
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/history.htm $(kde_htmldir)/en/kgoldrun/history.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/index.htm $(kde_htmldir)/en/kgoldrun/index.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/install.htm $(kde_htmldir)/en/kgoldrun/install.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/kgoldrunner.png $(kde_htmldir)/en/kgoldrun/kgoldrunner.png
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/level010.png $(kde_htmldir)/en/kgoldrun/level010.png
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/menu.htm $(kde_htmldir)/en/kgoldrun/menu.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/play.htm $(kde_htmldir)/en/kgoldrun/play.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/rules.htm $(kde_htmldir)/en/kgoldrun/rules.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/select.htm $(kde_htmldir)/en/kgoldrun/select.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/select.png $(kde_htmldir)/en/kgoldrun/select.png
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/tech.htm $(kde_htmldir)/en/kgoldrun/tech.htm
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/tute008.png $(kde_htmldir)/en/kgoldrun/tute008.png
	$(mkinstalldirs) $(kde_htmldir)/en/kgoldrun/
	$(INSTALL_DATA) $(srcdir)/typical.htm $(kde_htmldir)/en/kgoldrun/typical.htm

uninstall-local:
	-rm -f $(kde_htmldir)/en/kgoldrun/editbar.png
	-rm -f $(kde_htmldir)/en/kgoldrun/editor.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/enemy.png
	-rm -f $(kde_htmldir)/en/kgoldrun/genhints.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/hero.png
	-rm -f $(kde_htmldir)/en/kgoldrun/history.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/index.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/install.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/kgoldrunner.png
	-rm -f $(kde_htmldir)/en/kgoldrun/level010.png
	-rm -f $(kde_htmldir)/en/kgoldrun/menu.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/play.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/rules.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/select.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/select.png
	-rm -f $(kde_htmldir)/en/kgoldrun/tech.htm
	-rm -f $(kde_htmldir)/en/kgoldrun/tute008.png
	-rm -f $(kde_htmldir)/en/kgoldrun/typical.htm

####### kdevelop will overwrite this part!!! (end)############

	-rmdir $(kde_htmldir)/en/kgoldrun

